@@ -32,6 +32,7 @@
 - fix typo in flagdir configure option.
 - clarify multiple mounts description.
 - gaurd against incorrect umount return.
+- update man page autofs(8) for systemd.
 
 04/06/2014 autofs-5.1.0
 =======================
